--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,9 +8,15 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Run script
         run: |
-          echo hello world
+          echo hello 
           touch test
+          ls -l
+          
+
           
